<?xml version="1.0" encoding="utf-8"?><layout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".persegiPanjang" android:id="@+id/frameLayout">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tv_panjang" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:text="@string/panjang"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/lebar"
            android:ems="10"
            android:id="@+id/tv_lebar"
            app:layout_constraintStart_toStartOf="@+id/tv_panjang"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tv_panjang"
            app:layout_constraintEnd_toEndOf="@+id/tv_panjang"/>
    <Button
            android:text="@string/hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_hitung" app:layout_constraintStart_toStartOf="@+id/tv_lebar"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_lebar"/>
    <TextView
            android:text="@string/luas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasil_luas" app:layout_constraintStart_toStartOf="@+id/b_hitung"
            app:layout_constraintEnd_toEndOf="@+id/b_hitung" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/b_hitung"/>
    <TextView
            android:text="@string/keliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasil_kel" app:layout_constraintStart_toStartOf="@+id/hasil_luas"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/hasil_luas" app:layout_constraintEnd_toEndOf="@+id/hasil_luas"/>
    <Button
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_share" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/hasil_kel" app:layout_constraintStart_toStartOf="@+id/b_hitung"
            app:layout_constraintEnd_toEndOf="@+id/b_hitung"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>